fix: logic to wrap parent nodes in special columns + some alignement adjustment on last row

--- a/packages/org-chart/src/index.css
+++ b/packages/org-chart/src/index.css
@@ -138,6 +138,13 @@
   );
 }
 
+/* .row-last-6-tablet::before {
+  height: calc(
+    var(--col-height) + var(--row-column-gap) +
+      calc(var(--col-height) * var(--diff) + 12px * var(--diff)) + 1px
+  );
+} */
+
 .row {
   box-sizing: border-box;
   display: flex;
